--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "twit": "^2.2.11"
+    "twitter-lite": "^0.12.0"
   },
   "scripts": {
     "prestart": "cp -f ./cert/localhost.pem ./node_modules/webpack-dev-server/ssl || :",
@@ -32,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^4.14.1"
   }
 }
