--- a/package.json
+++ b/package.json
@@ -18,12 +18,44 @@
     "react-scripts": "3.4.1",
     "twitter-lite": "^0.12.0"
   },
+  "devDependencies": {
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-flowtype": "^5.1.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "flow": "^0.2.3",
+    "flow-bin": "^0.125.1",
+    "flow-coverage-report": "^0.7.0",
+    "flow-typed": "^3.1.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.4",
+    "node-sass": "^4.14.1",
+    "prettier": "^2.0.5",
+    "prettier-stylelint": "^0.4.2",
+    "stylelint": "^13.5.0",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-order": "^4.0.0",
+    "stylelint-scss": "^3.17.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "scripts": {
+    "flow": "flow",
+    "flow-coverage": "flow-coverage-report -i 'src/**/*.js' -t text --threshold 85 --exclude-non-flow",
+    "precommit": "lint-staged",
     "prestart": "cp -f ./cert/localhost.pem ./node_modules/webpack-dev-server/ssl || :",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,10 +71,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "flow": "^0.2.3",
-    "flow-typed": "^3.1.0",
-    "node-sass": "^4.14.1"
   }
 }
