--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "localforage": "^1.7.3",
+    "lodash.chunk": "^4.2.0",
     "react": "^16.13.1",
     "react-copy-write": "^0.8.0",
     "react-dom": "^16.13.1",
