--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "date-fns": "^2.14.0",
     "localforage": "^1.7.3",
     "lodash.chunk": "^4.2.0",
+    "lodash.uniq": "^4.5.0",
     "react": "^16.13.1",
     "react-copy-write": "^0.8.0",
     "react-dom": "^16.13.1",
+    "react-hot-loader": "^4.12.21",
     "react-scripts": "3.4.1",
     "twitter-lite": "^0.12.0"
   },
   "devDependencies": {
+    "@rescripts/cli": "0.0.14",
+    "@rescripts/rescript-env": "0.0.12",
+    "@rescripts/rescript-use-babel-config": "0.0.10",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-flowtype": "^5.1.0",
     "eslint-plugin-prettier": "^3.1.3",
@@ -54,9 +60,9 @@
     "flow-coverage": "flow-coverage-report -i 'src/**/*.js' -t text --threshold 85 --exclude-non-flow",
     "precommit": "lint-staged",
     "prestart": "cp -f ./cert/localhost.pem ./node_modules/webpack-dev-server/ssl || :",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test"
+    "start": "rescripts start",
+    "build": "rescripts build",
+    "test": "rescripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -72,5 +78,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "rescripts": [
+    [
+      "use-babel-config",
+      ".babelrc"
+    ]
+  ]
 }
