--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "flow-typed": "^3.1.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.4",
+    "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
     "prettier-stylelint": "^0.4.2",
