--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "animate.css": "^4.1.0",
     "date-fns": "^2.14.0",
     "localforage": "^1.7.3",
     "lodash.chunk": "^4.2.0",
