added cross-env to dependencies, added "development" script to package.json, updated README

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # Local Netlify folder
-.netlify
 functions/**/node_modules
 
-.npmrc
+# Local Netlify folder
+.netlify
