--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "flow-coverage": "flow-coverage-report -i 'src/**/*.js' -t text --threshold 85 --exclude-non-flow",
     "precommit": "lint-staged",
     "prestart": "cp -f ./cert/localhost.pem ./node_modules/webpack-dev-server/ssl || :",
-    "start": "rescripts start",
-    "build": "rescripts build",
-    "test": "rescripts test"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-brands-svg-icons": "^5.13.1",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@reach/router": "^1.3.3",
     "@testing-library/jest-dom": "^5.10.1",
@@ -42,27 +42,19 @@
     "date-fns": "^2.14.0",
     "localforage": "^1.7.4",
     "react": "^16.13.1",
-    "react-copy-write": "github:rlueder/react-copy-write",
+    "react-copy-write": "^0.8.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.12.21",
     "react-scripts": "3.4.1",
     "twitter-lite": "^0.14.0"
   },
   "devDependencies": {
-    "@rescripts/cli": "0.0.14",
-    "@rescripts/rescript-env": "0.0.12",
-    "@rescripts/rescript-use-babel-config": "0.0.10",
-    "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.2",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-flowtype": "^5.1.3",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
-    "flow": "^0.2.3",
     "flow-bin": "^0.127.0",
     "flow-coverage-report": "^0.7.0",
-    "flow-typed": "^2.6.2",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "lodash": "^4.17.15",
@@ -100,11 +92,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "rescripts": [
-    [
-      "use-babel-config",
-      ".babelrc"
-    ]
-  ]
+  }
 }
