--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-copy-write": "^0.8.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
+    "react-hot-loader": "^4.12.21",
     "react-scripts": "3.4.1",
     "twitter-lite": "^0.14.0"
   },
