--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "url": "https://github.com/rlueder/tidytweets/"
   },
   "scripts": {
+    "cypress:open": "cypress open",
     "develop": "cross-env CALLBACK_URL=http://localhost:8888/dashboard netlify dev",
     "flow": "flow",
     "flow-coverage": "flow-coverage-report -i 'src/**/*.js' -t text --threshold 85 --exclude-non-flow",
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
+    "cypress": "^4.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
