--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,22 @@
 version: 2.1
+
 orbs:
   cypress: cypress-io/cypress@1
+  node: circleci/node@3.0.0
   slack: circleci/slack@3.4.2
+
+jobs:
+  node/test:
+    docker:
+      - image: "cimg/base:stable"
+    steps:
+      - checkout
+      - node/install:
+          install-yarn: true
+          node-version: latest
+      - run: node --version
+
 workflows:
-  build:
+  test:
     jobs:
-      - cypress/run
+      - node/test
