--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,3 +56,6 @@ workflows:
       - deploy:
           requires:
             - e2e_tests
+          filters:
+            branches:
+              only: main
