--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "url": "https://github.com/rlueder/tidytweets/"
   },
   "scripts": {
+    "cypress:open": "cypress open",
+    "cypress:run": "cross-env CYPRESS_BASE_URL=http://localhost:8888 cypress run",
     "develop": "cross-env CALLBACK_URL=http://localhost:8888/dashboard netlify dev",
     "flow": "flow",
     "flow-coverage": "flow-coverage-report -i 'src/**/*.js' -t text --threshold 85 --exclude-non-flow",
@@ -36,9 +38,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@reach/router": "^1.3.3",
-    "@testing-library/jest-dom": "^5.10.1",
-    "@testing-library/react": "^10.3.0",
-    "@testing-library/user-event": "^12.0.2",
     "date-fns": "^2.14.0",
     "localforage": "^1.7.4",
     "react": "^16.13.1",
@@ -50,7 +49,11 @@
     "twitter-lite": "^0.14.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.10.1",
+    "@testing-library/react": "^10.3.0",
+    "@testing-library/user-event": "^12.0.2",
     "cross-env": "^7.0.2",
+    "cypress": "^4.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
@@ -63,6 +66,7 @@
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
     "prettier-stylelint": "^0.4.2",
+    "semantic-release": "^17.0.8",
     "stylelint": "^13.6.1",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-order": "^4.1.0",
