select at the end of the line

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "twitter-lite": "^0.14.0"
   },
   "devDependencies": {
