--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "develop": "cross-env CALLBACK_URL=http://localhost:8888/dashboard netlify dev",
     "flow": "flow",
     "flow-coverage": "flow-coverage-report -i 'src/**/*.js' -t text --threshold 85 --exclude-non-flow",
-    "precommit": "lint-staged",
     "prestart": "cp -f ./cert/localhost.pem ./node_modules/webpack-dev-server/ssl || :",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -45,6 +44,7 @@
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
+    "react-intl": "^4.7.2",
     "react-scripts": "3.4.1",
     "twitter-lite": "^0.14.0"
   },
@@ -78,9 +78,8 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,json,css}": [
-      "prettier --write",
-      "git add"
+    "src/**/*.{js,jsx,json,css,scss,md}": [
+      "prettier --write"
     ]
   },
   "eslintConfig": {
