--- a/package.json
+++ b/package.json
@@ -23,19 +23,12 @@
   "scripts": {
     "cypress:open": "cypress open",
     "cypress:run": "cross-env CYPRESS_BASE_URL=http://localhost:8888 cypress run",
-    "develop": "cross-env CALLBACK_URL=http://localhost:8888/dashboard netlify dev",
-    "flow": "flow",
-    "flow-coverage": "flow-coverage-report -i 'src/**/*.js' -t text --threshold 85 --exclude-non-flow",
-    "prestart": "cp -f ./cert/localhost.pem ./node_modules/webpack-dev-server/ssl || :",
+    "develop": "ntl dev",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.29",
-    "@fortawesome/free-brands-svg-icons": "^5.13.1",
-    "@fortawesome/free-solid-svg-icons": "^5.13.1",
-    "@fortawesome/react-fontawesome": "^0.1.11",
     "@reach/router": "^1.3.3",
     "date-fns": "^2.14.0",
     "localforage": "^1.7.4",
@@ -44,7 +37,7 @@
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
-    "react-intl": "^4.7.2",
+    "react-intl": "^5.20.7",
     "react-scripts": "3.4.1",
     "twitter-lite": "^0.14.0"
   },
@@ -57,12 +50,10 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
-    "flow-bin": "^0.127.0",
-    "flow-coverage-report": "^0.7.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "lodash": "^4.17.15",
-    "netlify-cli": "^2.54.0",
+    "netlify-cli": "^6.1.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
     "prettier-stylelint": "^0.4.2",
