--- a/package.json
+++ b/package.json
@@ -23,45 +23,60 @@
   "scripts": {
     "cypress:open": "cypress open",
     "cypress:run": "cross-env CYPRESS_BASE_URL=http://localhost:8888 cypress run",
-    "develop": "ntl dev",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "ts-coverage": "typescript-coverage-report --strict --threshold=95"
   },
   "dependencies": {
-    "@reach/router": "^1.3.3",
-    "date-fns": "^2.14.0",
-    "localforage": "^1.7.4",
-    "react": "^16.13.1",
+    "@reach/router": "^1.3.4",
+    "date-fns": "^2.23.0",
+    "localforage": "^1.9.0",
+    "react": "^17.0.2",
     "react-copy-write": "^0.8.0",
-    "react-countup": "^4.3.3",
-    "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.12.21",
+    "react-countup": "^5.2.0",
+    "react-dom": "^17.0.2",
+    "react-hot-loader": "^4.13.0",
     "react-intl": "^5.20.7",
-    "react-scripts": "3.4.1",
-    "twitter-lite": "^0.14.0"
+    "react-scripts": "^4.0.3",
+    "twitter-lite": "^1.1.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.10.1",
-    "@testing-library/react": "^10.3.0",
-    "@testing-library/user-event": "^12.0.2",
-    "cross-env": "^7.0.2",
-    "cypress": "^4.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.3",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
-    "lodash": "^4.17.15",
+    "@babel/preset-typescript": "^7.15.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.0",
+    "@types/lodash": "^4.14.172",
+    "@types/node": "^16.4.13",
+    "@types/reach__router": "^1.3.9",
+    "@types/react": "^17.0.16",
+    "@types/react-copy-write": "^0.7.2",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
+    "cross-env": "^7.0.3",
+    "cypress": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.1.2",
+    "lodash": "^4.17.21",
     "netlify-cli": "^6.1.0",
-    "node-sass": "^4.14.1",
-    "prettier": "^2.0.5",
+    "node-sass": "^6.0.1",
+    "prettier": "^2.3.2",
     "prettier-stylelint": "^0.4.2",
-    "semantic-release": "^17.0.8",
-    "stylelint": "^13.6.1",
-    "stylelint-config-recommended-scss": "^4.2.0",
+    "semantic-release": "^17.4.4",
+    "stylelint": "^13.13.1",
+    "stylelint-config-recommended-scss": "^4.3.0",
     "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.18.0"
+    "stylelint-scss": "^3.20.1",
+    "typescript": "^4.3.5",
+    "typescript-coverage-report": "^0.6.0"
+  },
+  "engines": {
+    "node": "^14.x"
   },
   "husky": {
     "hooks": {
