--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - checkout
       - node/install:
-          node-version: "lts/fermium"
+          node-version: "14.17.4"
       - run: npm test
   deploy:
     machine:
